--- a/Index.css
+++ b/Index.css
@@ -1,9 +1,9 @@
-<style>
+
 h1 {background-image: url("Header_background")}
 
  body {
 	font-family: 'Amatic SC', cursive;
 	background: blue;
+	text-align: center;
 }
 
-</style>
