--- a/Index.css
+++ b/Index.css
@@ -1,6 +1,13 @@
  body {
 	font-family: 'Amatic SC', cursive;
-	background: ;
+	background: #FDF5E6;
 	text-align: center;
 
+}
+ul {
+	border: 1px solid #FFFAFA;
+}
+li { 
+	display: inline;
+	padding: 0px 80px 0px 80px;
 }
